Fix overflow, and now it was also on the body... omg

--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,11 @@ body {
 
 body {
   font-size: 1.6rem;
-  overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
 }
 
-#root {
+#root,
+body {
   overflow-x: hidden;
   overflow-y: overlay;
 }
